src/objects/Apttus__DocAssemblyRule__c.object
<CustomObject>
    <description>Represents a single rule in a document assembly ruleset</description>
    <fields>
        <fullName>APTS_AgreementLIRelatedListDetails__c</fullName>
        <label>AgreementLIRelatedListDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_DR_External_Id__c</fullName>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Front_Page_Image__c</fullName>
        <description>For Front Page image on Template</description>
        <label>Front Page Image</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                    <default>true</default>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>Health &amp; Care B</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Care A</fullName>
                </value>
                <value>
                    <fullName>Co-workers</fullName>
                </value>
                <value>
                    <fullName>Cappuccino</fullName>
                </value>
                <value>
                    <fullName>Dutch originals</fullName>
                </value>
                <value>
                    <fullName>Horeca Pickwick Tea</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>PDO</fullName>
                </value>
                <value>
                    <fullName>Laurentis</fullName>
                </value>
                <value>
                    <fullName>Themepark</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Factory</fullName>
                </value>
                <value>
                    <fullName>Shops</fullName>
                </value>
                <value>
                    <fullName>Gevalia</fullName>
                </value>
                <value>
                    <fullName>Nordic Roast</fullName>
                </value>
                <value>
                    <fullName>Cafax</fullName>
                </value>
                <value>
                    <fullName>Kenco</fullName>
                </value>
                <value>
                    <fullName>L&apos;Or</fullName>
                </value>
                <value>
                    <fullName>Friele</fullName>
                </value>
                <value>
                    <fullName>Krone</fullName>
                </value>
                <value>
                    <fullName>House of Coffee</fullName>
                </value>
                <value>
                    <fullName>Marcilla</fullName>
                </value>
                <value>
                    <fullName>Saimaza</fullName>
                </value>
                <value>
                    <fullName>Soley</fullName>
                </value>
                <value>
                    <fullName>Jacobs</fullName>
                </value>
                <value>
                    <fullName>HAG</fullName>
                </value>
                <value>
                    <fullName>Splendid</fullName>
                </value>
                <value>
                    <fullName>Café Noir</fullName>
                </value>
                <value>
                    <fullName>Karat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Proposal_Category__c</fullName>
        <description>The quote/proposal category</description>
        <inlineHelpText>The quote/proposal category</inlineHelpText>
        <label>Proposal Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the rule is active</description>
        <inlineHelpText>Indicates whether the rule is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Category__c</fullName>
        <description>The agreement category to match.</description>
        <inlineHelpText>The agreement category to match.</inlineHelpText>
        <label>Agreement Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The description for the rule</description>
        <inlineHelpText>The description for the rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__RulesetId__c</fullName>
        <description>ID of the associated rule set</description>
        <inlineHelpText>ID of the associated rule set</inlineHelpText>
        <label>Ruleset</label>
        <referenceTo>Apttus__DocAssemblyRuleset__c</referenceTo>
        <relationshipName>SectionRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The rule evaluation sequence</description>
        <inlineHelpText>The rule evaluation sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Doc Assembly Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Assembly Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>